# neurapolis

./: .gitignore  readme.md
ca/: Dockerfile  cloudbuild.yaml  main.py  pyproject.toml
ca/experiments/: Untitled-1.ipynb  prompt.py
ca/experiments/nodes/: router.ipynb
ca/src/: agent.py  server.py
ca/src/utils/: nodes.py  tools.py
etl/: README.md  pyproject.toml
etl-evaluator/: pyproject.toml
etl-evaluator/src/etl-evaluator/: main.ipynb  split.ipynb
etl/src/etl/: config.py  main.py
etl/src/etl/loaders/: agenda_items_loader.py  base_loader.py  bodies_loader.py  consultations_loader.py  extractor_base_loader.py  files_loader.py  legislative_terms_loader.py  locations_loader.py  meetings_loader.py  memberships_loader.py  organizations_loader.py  paginator_base_loader.py  papers_loader.py  persons_loader.py
etl/src/etl/models/: agenda_item.py  body.py  consultation.py  db_dict.py  file.py  file_chunk.py  file_section.py  legislative_term.py  location.py  meeting.py  membership.py  organization.py  paper.py  person.py  ris_api_dto.py  system.py
etl/src/etl/services/: db_session_builder.py
etl/src/etl/uploaders/: agenda_item_has_auxiliary_file_relationships_uploader.py  agenda_item_has_consultation_relationships_uploader.py  agenda_item_has_resolution_file_relationships_uploader.py  agenda_items_uploader.py  base_uploader.py  body_has_legislative_term_relationships_uploader.py  body_has_location_relationships_uploader.py  body_has_meeting_relationships_uploader.py  body_has_organization_relationships_uploader.py  body_has_paper_relationships_uploader.py  body_has_person_relationships_uploader.py  body_uploader.py  consultation_has_meeting_relationships_uploader.py  consultations_uploader.py  file_has_derivative_file_relationships_uploader.py  file_has_master_file_relationships_uploader.py  files_uploader.py  legislative_terms_uploader.py  locations_uploader.py  meeting_has_agenda_item_relationships_uploader.py  meeting_has_auxiliary_file_relationships_uploader.py  meeting_has_invitation_file_relationships_uploader.py  meeting_has_location_relationships_uploader.py  meeting_has_results_protocol_file_relationships_uploader.py  meeting_has_verbatim_protocol_file_relationships_uploader.py  meetings_uploader.py  membership_has_on_behalf_of_relationships_uploader.py  memberships_uploader.py  nodes_base_uploader.py  organization_has_consultation_relationships_uploader.py  organization_has_location_relationships_uploader.py  organization_has_meeting_relationships_uploader.py  organization_has_membership_relationships_uploader.py  organization_has_sub_organization_relationships_uploader.py  organizations_uploader.py  paper_has_auxiliary_file_relationships_uploader.py  paper_has_consultation_relationships_uploader.py  paper_has_location_relationships_uploader.py  paper_has_main_file_relationships_uploader.py  paper_has_originator_organization_relationships_uploader.py  (+10 more)
etl/src/etl/utilities/: request_session.py  setup_logging.py
evals/etl/: dataset_a50f4920-5288-48b8-8222-123cc290bf17 (1).csv  helper.html  main.ipynb  main.py  pyproject.toml  run.py  sectionizer.ipynb
retriever/: README.md  langgraph.json  pyproject.toml
retriever/evals/: main.ipynb
retriever/neo4j-advanced-rag/: main.py
retriever/neo4j-advanced-rag/neo4j_advanced_rag/: chain.py  retrievers.py
retriever/neo4j-cypher/: greet.py  main.py
retriever/neo4j-cypher/neo4j_cypher/: chain.py  selector.py
retriever/src/retriever/: config.py  graph.py  graph_configurable.py  main.py  schema.json  stripped_schema.json
retriever/src/retriever/edges/: after_cleaner_edge_continute_to_relevance_graders_edge.py  after_planner_continue_to_retrievers_edge.py  after_relevance_grader_continue_to_related_data_gatherer_edge.py
retriever/src/retriever/nodes/: cleaner_node.py  planner_node.py  related_data_gatherer_node.py  relevance_grader_node.py  retriever_node.py  search_planner_node.py  (+1 more)
ui/: .dockerignore  .gcloudignore  Dockerfile  Untitled-1.txt  app.py  cloudbuild.yaml  pyproject.toml  requirements.txt
unstructured-api/: Dockerfile  pyproject.toml
unstructured-api/src/unstructured-api/: main.py
unstructured-api/src/unstructured_api/: main.py
(+33 files in other folders)
