[tool.poetry]
name = "etl-evaluator"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langsmith = "^0.1.108"
ipykernel = "^6.29.5"
neo4j = "^5.24.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
