[tool.poetry]
name = "retriever"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "retriever", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
pydantic = "^2.8.2"
pydantic-settings = "^2.4.0"
neo4j = "^5.23.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
