[tool.poetry]
name = "zeitkapsel-ui"
version = "0.1.0"
description = "UI component for the Zeitkapsel project"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
aiohttp = "3.9.5"
altair = "5.3.0"
fastapi = "0.111.0"
fastapi-cli = "0.0.3"
GitPython = "3.1.43"
httpx = "0.27.0"
langchain = "0.1.20"
langchain-community = "0.0.38"
langchain-core = "0.1.52"
langchain-openai = "0.1.6"
langchain-text-splitters = "0.0.1"
langserve = "0.1.1"
langsmith = "0.1.56"
openai = "1.28.1"
pandas = "2.2.2"
pydantic = "2.7.1"
python-dotenv = "1.0.1"
streamlit = "1.34.0"
streamlit-feedback = "0.1.3"
tiktoken = "0.6.0"
uvicorn = "0.29.0"

[tool.poetry.dev-dependencies]
# Add any development dependencies here

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"