[tool.poetry]
name = "unstructured-api"
version = "0.1.0"
description = ""
authors = ["Julius Huck <mail@juliushuck.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
unstructured = {extras = ["all-docs"], version = "^0.15.8"}
fastapi = "^0.112.2"
uvicorn = "^0.30.6"
python-multipart = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
